--- a/public/output.css
+++ b/public/output.css
@@ -698,10 +698,6 @@ video {
     margin-top: auto;
 }
 
-.mb-\[105px\] {
-    margin-bottom: 105px;
-}
-
 .flex {
     display: flex;
 }
@@ -736,6 +732,10 @@ video {
 
 .h-\[120px\] {
     height: 120px;
+}
+
+.h-\[14px\] {
+    height: 14px;
 }
 
 .h-\[150px\] {
@@ -775,10 +775,6 @@ video {
     height: 100%;
 }
 
-.h-\[14px\] {
-    height: 14px;
-}
-
 .max-h-full {
     max-height: 100%;
 }
@@ -812,6 +808,10 @@ video {
     width: 120px;
 }
 
+.w-\[14px\] {
+    width: 14px;
+}
+
 .w-\[18px\] {
     width: 18px;
 }
@@ -843,10 +843,6 @@ video {
 
 .w-full {
     width: 100%;
-}
-
-.w-\[14px\] {
-    width: 14px;
 }
 
 .max-w-2xl {
@@ -968,10 +964,6 @@ video {
     gap: 6px;
 }
 
-.self-end {
-    align-self: flex-end;
-}
-
 .overflow-hidden {
     overflow: hidden;
 }
@@ -1014,12 +1006,12 @@ video {
     border-width: 1px;
 }
 
-.border-t {
-    border-top-width: 1px;
-}
-
 .border-b {
     border-bottom-width: 1px;
+}
+
+.border-t {
+    border-top-width: 1px;
 }
 
 .border-\[\#E9E8ED\] {
@@ -1079,6 +1071,36 @@ video {
 .bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-gray-800 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-gray-900 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 .object-contain {
@@ -1161,10 +1183,6 @@ video {
     padding-bottom: 1rem;
 }
 
-.pb-\[105px\] {
-    padding-bottom: 105px;
-}
-
 .pt-10 {
     padding-top: 2.5rem;
 }
@@ -1187,10 +1205,6 @@ video {
 
 .text-right {
     text-align: right;
-}
-
-.font-\[Poppins\] {
-    font-family: Poppins;
 }
 
 .text-2xl {
@@ -1242,6 +1256,10 @@ video {
     line-height: 21px;
 }
 
+.leading-\[24px\] {
+    line-height: 24px;
+}
+
 .leading-\[27px\] {
     line-height: 27px;
 }
@@ -1256,10 +1274,6 @@ video {
 
 .leading-\[36px\] {
     line-height: 36px;
-}
-
-.leading-\[24px\] {
-    line-height: 24px;
 }
 
 .text-\[\#270738\] {
@@ -1295,6 +1309,18 @@ video {
 .text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.opacity-5 {
+    opacity: 0.05;
+}
+
+.opacity-60 {
+    opacity: 0.6;
+}
+
+.opacity-50 {
+    opacity: 0.5;
 }
 
 .outline-none {
